UPD: date on slides

--- a/nba_data_explanatory.ipynb
+++ b/nba_data_explanatory.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "# <center>NBA Players of the Week - Explanatory Visual Analysis</center>\n",
     "<br>\n",
-    "<center>Created: 10/27/2018<br>\n",
-    "Latest Update: 10/28/2018<br>\n",
+    "<center>Created: October 27, 2018<br>\n",
+    "Latest Update: November 2, 2018<br>\n",
     "By: Can Bekleyici - bekleydata.com<br></center>"
    ]
   },
